@@ -12,6 +12,9 @@ What's New in Python 3.0a3?
 Core and Builtins
 -----------------
 
+- Issue #1393: object_richcompare() returns NotImplemented instead of
+  False if the objects aren't equal, to give the other side a chance.
+
 - Issue #1692: Interpreter was not displaying location of SyntaxError
 
 - Improve some exception messages when Windows fails to load an extension
